# shozyfx

./: .dockerignore  Dockerfile  docker-compose.yaml
backend/: Cargo.toml  example.html
backend/http/: analytics.http  auth.http
backend/migrations/: 0001_create_tables.sql
backend/src/: main.rs
backend/src/libs/: email.rs  encryptor.rs  mod.rs
backend/src/pkg/: mod.rs
backend/src/pkg/handlers/: analytics_handler.rs  auth_handler.rs  mod.rs  ping_handler.rs  signals_handler.rs
backend/src/pkg/helper/: hash.rs  mod.rs  responder.rs
backend/src/pkg/http/: config.rs
backend/src/pkg/middleware/: jwt.rs
backend/src/pkg/models/: charts.rs  currency.rs  mod.rs  state.rs  users.rs
backend/src/pkg/repositories/: financial.rs  mod.rs  retail.rs
backend/src/pkg/services/: analysis.rs  create_charts_data.rs  map_currency_data.rs  mod.rs
backend/templates/: reset-password.html
frontend/: components.json  index.html  package.json  tailwind.config.js  tailwind.config.ts  tailwind.css
frontend/src/: App.tsx  app.css  index.css  main.tsx
frontend/src/@types/: auth.ts  charts.ts
frontend/src/_mocks/: events.ts
frontend/src/components/: Body.tsx  Charts.tsx  DatePicker.tsx  FilterView.tsx  Footer.tsx  Icons.tsx  LazyLoad.tsx  Link.tsx  LoadingButton.tsx  LoadingScreen.tsx  MaxWidthPageWrapper.tsx  Nav.tsx  NavMenu.tsx  PageProgress.tsx  SearchDialog.tsx  SelectorView.tsx  SideBar.tsx  SideBarNav.tsx  Table.tsx  ThemeToggle.tsx  Typography.tsx
frontend/src/conf/: cons.ts
frontend/src/hooks/: useAuth.ts  useLocalStorage.ts  usePath.ts  useRouter.ts  (+4 more)
(+64 files in other folders)
