[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-lab = {version = "0.20.0", features = ["actix-files", "spa"]}
actix-files = "0.6.2"
bcrypt = "0.15.0"
chrono = {version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
jsonwebtoken = "9.0.0"
log = "0.4.20"
regex = {version = "1.9.5"}
serde = {version = "1.0.188", features = ["serde_derive", "derive"]}
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["mysql", "uuid", "chrono", "runtime-tokio"] }
tokio = {version = "1.32.0", features = ["full"]}
uuid = {version = "1.4.1", features = ["v4", "serde"]}
env_logger = "0.10.0"
lettre = "0.11.1"
scraper = "0.18.1"
rand = "0.8.5"
curl = "0.4.44"
lazy_static = "1.4.0"
linreg = "0.2.0"
urlencoding = "2.1.3"
base64 = "0.21.5"
percent-encoding = "2.3.0"
encoding = "0.2.33"
